--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,14 +26,24 @@ button {
     cursor: pointer;
 }
 
-button:focus {
-    outline: none;
-    box-shadow: none;
+input,
+button,
+textarea,
+select {
+    font: inherit;
+    color: inherit;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
+*:disabled {
+    cursor: not-allowed;
+}
+
+input:focus,
+button:focus,
+textarea:focus,
+select:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 ul {
@@ -46,6 +56,17 @@ li {
     display: block;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
 p,
 h1,
 h2,
@@ -55,12 +76,6 @@ h5,
 h6 {
     overflow-wrap: break-word;
     hyphens: auto;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
 }
 
 #root {
